# revng

./: CMakeLists.txt
include/revng/ADT/: ConstexprString.h  TrackingContainer.h
include/revng/EarlyFunctionAnalysis/: BasicBlock.h  ControlFlowGraph.h  FunctionMetadataCache.h
include/revng/Model/: CABIFunctionDefinition.h  IRHelpers.h  RawFunctionDefinition.h  RawFunctionType.h  Segment.h  UnionDefinition.h
include/revng/Pipeline/: Analysis.h  AnyDiff.h  Context.h  Global.h  InvalidationEvent.h  LLVMContainer.h  Loader.h  Pipe.h  Runner.h  Step.h  Target.h  TupleTreeInvalidationEvent.h
include/revng/PipelineC/: ForwardDeclarations.h  ForwardDeclarationsC.h  Prototypes.h
include/revng/Pipes/: FunctionStringMap.h  PipelineManager.h  StringMapContainer.h
include/revng/Support/: MetaAddress.h
include/revng/TupleTree/: DocumentError.h  TupleTree.h  TupleTreeDiff.h  Visits.h
lib/ABI/: DefaultFunctionPrototype.cpp
lib/ABI/FunctionType/: Conversion.cpp  Layout.cpp
lib/EarlyFunctionAnalysis/: DetectABI.cpp  FunctionMetadata.cpp  FunctionSummaryOracle.cpp
lib/FunctionIsolation/: EnforceABI.cpp  IsolateFunctions.cpp
lib/Lift/: LoadBinaryPass.cpp  RootAnalyzer.cpp
lib/Model/: Binary.cpp  CMakeLists.txt  Type.cpp  TypeSystemPrinter.cpp  Verification.cpp
lib/PTML/: Doxygen.cpp
lib/Pipeline/: CMakeLists.txt  Global.cpp  GlobalsMap.cpp  InvalidationEvent.cpp  Loader.cpp  Runner.cpp  Step.cpp
lib/PipelineC/: CMakeLists.txt  PipelineC.cpp  PipelineCTracing.cpp  wrap.py
lib/Pipes/: CMakeLists.txt  FunctionStringMap.cpp  PipelineManager.cpp  Pipes.cpp  RootKind.cpp  StringMapContainer.cpp
lib/Pipes/Yield/: Assembly.cpp  AssemblyPipes.cpp  CFGPipes.cpp
lib/Yield/: CMakeLists.txt  PTML.cpp
lib/Yield/Assembly/: DisassemblyHelper.cpp  HTML.cpp  LLVMDisassemblerInterface.cpp  Plain.cpp
lib/Yield/ControlFlow/: Extraction.cpp  FallthroughDetection.cpp  NodeSizeCalculation.cpp  SVG.cpp
lib/Yield/Internal/: Dump.cpp  Verify.cpp
lib/Yield/Pipes/: AssemblyPipes.cpp  CFGPipes.cpp  CallGraphPipes.cpp
libexec/revng/: revng-check-conventions
libexec/revng/mass-testing/: revng-dump-sections  revng-test-harness  test-harness
python/: CMakeLists.txt
python/revng/api/: _capi.py  error_list.py  listenable_manager.py  manager.py  step.py  target.py
python/revng/cli/: commands_registry.py  revng.py  support.py  translate.py
python/revng/daemon/: __init__.py  manager.py  manager_proxy.py  schema.graphql.tpl  schema.py  schema_generator.py  static_handlers.py  util.py
python/revng/pipelinec_proto/: add_tracing.py  compile.py  parse.py  proto.py  trace_runner.c.j2  tracing_wrapper.cpp.j2
scripts/: revng-check-conventions
share/revng/: mass-testing-meta.yml  valgrind.supp
share/revng/pipelines/: revng-pipelines.yml  translate.yml  yield-assembly.yml  yield-cfg.yml
tests/analysis/: AnalysisTests.cmake
tests/daemon/: test.py
tests/runtime/: RuntimeTests.cmake
tests/tools/pipeline/: StringContainerLibrary.cpp
tests/unit/: DiffInvalidationEvent.cpp  Model.cpp  ModelType.cpp  Pipeline.cpp
tools/pipeline/: CMakeLists.txt  Main.cpp
tools/pipeline/analyze/: Main.cpp
typescript/mass-testing-report/: CMakeLists.txt
typescript/mass-testing-report/src/: crashes.html  failures.html  main.ts  timeouts.html
(+51 files in other folders)
